gcc/testsuite/gcc.dg/pr123463.c
/* { dg-do compile } */

enum mm { L };
extern const enum mm m[1];
void f(unsigned egno) {
	f(m);		/* { dg-error "integer from pointer" } */
}

